--- a/index.html
+++ b/index.html
@@ -8,45 +8,55 @@
   </head>
   <body>
     <header>
-      <a href="./">WEBSTUDIO</a>
       <nav>
-        <a href="./">Studio</a>
-        <a href="./">Portfolio</a>
-        <a href="./">Contacts</a>
+        <!-- navigation -->
+        <a href="href=”./index.html">WebStudio</a>
+        <ul>
+            <li><a href="">Studio</a></li>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Contacts</a></li>
+        </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+      <address>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+    </address>
     </header>
     <main>
       <section>
+        <!-- section 1 -->
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <section>
+        <!-- section 2 -->
+        <h2 hidden>features</h2>
         <ul>
           <li>
-            <h2>Strategy</h2>
+            <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h2>Punctuality</h2>
+            <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h2>Diligence</h2>
+            <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h2>Technologies</h2>
+            <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -55,6 +65,7 @@
         </ul>
       </section>
       <section>
+        <!-- section 3 -->
         <h2>What are we doing</h2>
         <ul>
           <li><img src="./images/pic1-pc.jpg" alt="computer" width="360" /></li>
@@ -67,6 +78,7 @@
         </ul>
       </section>
       <section>
+        <!-- section 4 -->
         <h2>Our Team</h2>
         <ul>
           <li>
@@ -93,7 +105,8 @@
       </section>
     </main>
     <footer>
-      <a href="./">WEBSTUDIO</a>
+        <!-- footer -->
+        <a href="href=”./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
