--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <nav>
         <!-- navigation -->
-        <a href="href=”./index.html">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
             <li><a href="">Studio</a></li>
             <li><a href="">Portfolio</a></li>
@@ -106,7 +106,7 @@
     </main>
     <footer>
         <!-- footer -->
-        <a href="href=”./index.html">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
